# Personal_Study_Coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  rag.ipynb  req.txt  start.sh  streamlit_app.py
app/: config.py  state.py
app/agent/: graph.py  tools.py
app/api/: agent.py  chat.py  quiz.py  upload.py
app/rag/: pipeline.py  retriever.py
eval/: results.md  run_eval.py  test_set.py
faiss_index/: index.faiss  index.pkl
frontend/: agent_tab.py  api_client.py  chat_tab.py  metrics_tab.py  quiz_tab.py
tests/: conftest.py  test_agent.py  test_api.py  test_retriever.py
