[project]
name = "personal-study-coach"
version = "2.0.0"
description = "RAG-based study assistant API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=0.3.0",
    "numpy>=1.26.0",
    "pypdf>=6.9.2",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
    "ragas>=0.2",
    "datasets>=5.0.0",
    "streamlit>=1.35",
    "requests>=2.32.5",
    "pandas>=3.0.3",
]
